correction volet édition
remplacement de l'ancienne scrollbar avec la nouvelle

--- a/protodef/css/style.css
+++ b/protodef/css/style.css
@@ -520,7 +520,7 @@ width: 5px;
 	padding: 20px;
 }*/
 
-#scrollH{
+#scrollH, #scrollH2{
 	height: 200px;
 	overflow: hidden;
 	position: relative;
